--- a/index.html
+++ b/index.html
@@ -48,17 +48,23 @@
                 </div>
             </div>
         </div>
-        <div class="quote-container">
-            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-            <div class="quote-signature">-Thor, God of Thunder</div>
+        <div style="background-color: #E5E7EB;">
+            <div class="quote-container">
+                <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+                <div class="quote-signature">-Thor, God of Thunder</div>
+            </div>
         </div>
         <div class="call-to-action">
             <div class="action-text">
                 <div class="action-headline">Call to action! It's time!</div>
                 <div class="action-subtext">Sign up for our product by clicking that button right over there!</div>
             </div>  
-            <button class="action-signup">Sign Up</button>
+            <button class="signup">Sign Up</button>
         </div>   
-        <div class="footer">Copyright @ The Odin Project 2021</div> 
+        <div class="footer">
+            <p class="copyright">
+                Copyright @ The Odin Project 2021
+            </p>
+        </div> 
     </body>
 </html>
