Add images and add effects to buttons and links

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <body>
         <div class="hero">
             <div class="header">
-                <div class="logo">Header Logo</div>
+                <div class="logo">
+                    <a href="./index.html">Header Logo</a>
+                </div>
                 <ul class="header-links">
-                    <a>header link one</a>
-                    <a>header link two</a>
-                    <a>header link three</a>
+                    <a href="./index.html">header link one</a>
+                    <a href="./index.html">header link two</a>
+                    <a href="./index.html">header link three</a>
                 </ul>
             </div>
             <div class="dashboard">
@@ -24,26 +26,28 @@
                     <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
                     <button class="signup">Sign Up</button>
                 </div> 
-                <div class="placeholder">this is a placeholder for an image</div>
+                <div class="img-container">
+                    <img class="placeholder" src="images/lightning.jpg">
+                </div>
             </div>
         </div>  
         <div class="information">
             <div class="info-headline">Some random information.</div>
             <div class="info-container">
                 <div class="info">
-                    <div class="info-image"></div>
+                    <img class="info-image" src="images/bridge.jpg">
                     <div class="info-text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="info">
-                    <div class="info-image"></div>
+                    <img class="info-image" src="images/mountains.jpg">
                     <div class="info-text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="info">
-                    <div class="info-image"></div>
+                    <img class="info-image" src="images/forest.jpg">
                     <div class="info-text">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="info">
-                    <div class="info-image"></div>
+                    <img class="info-image" src="images/winter-tree.jpg">
                     <div class="info-text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
