Change header logo text to image

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="hero">
             <div class="header">
                 <div class="logo">
-                    <a href="./index.html">Header Logo</a>
+                    <a  href="./index.html"><img src="images/raccoon-dj.png"></a>
                 </div>
                 <ul class="header-links">
                     <a href="./index.html">header link one</a>
